# CameraPlacement

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  imgui.ini
cameras/Kinect/: intrinsics.csv
models/default/: Geometry Mod.dae
output/: camera_poses.csv
shaders/: phong.fs  phong.vs  postprocess.fs  postprocess.vs  textured.fs
src/: CameraPlacement.cpp  CameraPlacement.h  CameraPreview.cpp  CameraPreview.h  Controller.cpp  Controller.h  Exporter.cpp  Exporter.h  Gui.cpp  Gui.h
src/engine/: AABB.cpp  AABB.h  Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  Exception.cpp  Exception.h  Frustum.cpp  Frustum.h  Helper.cpp  Helper.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Multisample_Renderpass.cpp  Multisample_Renderpass.h  Multisample_Texture.cpp  Multisample_Texture.h  Program.cpp  Program.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/engine/interface/: Texture_Interface.cpp  Texture_Interface.h
